# NIFTi_InFieldPicsServer

./: README.md
EXIFReader/: CMakeLists.txt  manifest.xml
EXIFReader/launch/: InFieldPicsServer.launch  InFieldPicsServer_debug.launch
EXIFReader/src/: AnnotatedPicsManager.cpp  AnnotatedPicsManager.h  App.cpp  AppTest.cpp  CVPicUtil.cpp  CVPicUtil.h  EXIFParser.cpp  EXIFParser.h  EXIFParsingUtil.h  EXIFSpec.h  FileReadingUtil.cpp  FileReadingUtil.h  InFieldPicsServer.cpp  InFieldPicsServer.h  InFieldPicturesLoader.cpp  InFieldPicturesLoader.h  PicturesLoader.cpp  PicturesLoader.h  RobotPicturesLoader.cpp  RobotPicturesLoader.h
EXIFReader_msgs/: CMakeLists.txt
EXIFReader_msgs/msg/: Deletion.msg
EXIFReader_msgs/srv/: GetAllAnnotatedPictures.srv
geographic_info/: mainpage.dox  manifest.xml
geographic_info/msg/: AnnotatedPicture.msg  GeoCoordinate.msg  Modification.msg
geographic_info/srv/: GetAnnotatedPicture.srv
nifti_pics_server_util/: CMakeLists.txt  mainpage.dox  manifest.xml
nifti_pics_server_util/include/nifti_pics_server_util/: AnnotatedPicUtil.h  EXIFInfo.h  ExceptionWithString.h
nifti_pics_server_util/src/: AnnotatedPicUtil.cpp  ExceptionWithString.cpp
